--- a/src/SistemaAcademico/View/FrmCurso.form
+++ b/src/SistemaAcademico/View/FrmCurso.form
@@ -231,6 +231,9 @@
                   </Table>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="TableCursoMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
